--- a/src/Anywhere.ArcGIS/Anywhere.ArcGIS.csproj
+++ b/src/Anywhere.ArcGIS/Anywhere.ArcGIS.csproj
@@ -16,9 +16,18 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>ArcGIS ArcGISServer ArcGISOnline Esri REST netstandard anywhere GIS Mapping Map Location GeoLocation OAuth</PackageTags>
     <Version>1.9.1</Version>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1705;UseAsyncSuffix</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
+    <NoWarn>1701;1702;1705;UseAsyncSuffix</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <NoWarn>1701;1702;1705;UseAsyncSuffix</NoWarn>
   </PropertyGroup>
 
